--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div class="hero">
         <div class="hero__container">
             <div class="hero__info">
-                <h1 class="hero__main-text">This website is awesome</h1>
+                <h1 class="hero__main-text">Trains and trams are awesome</h1>
                 <p class="hero__secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="hero__sign-up-btn">Sign up</button>
             </div>
-            <img src="./img/train_by_markus-winkler_r.png" alt="German bullet train" class="hero__image">
+            <img src="./img/train_by_markus-winkler_r.png" alt="White bullet train" class="hero__image">
         </div>
     </div>
 
@@ -34,19 +34,19 @@
         <h2 class="info__title">Some random information.</h2>
         <div class="info__cards">
             <div class="card">
-                <img src="./img/train-by-daniel-abadia_small.png" alt="" class="card__image">
+                <img src="./img/train-by-daniel-abadia_small.png" alt="White bullet train" class="card__image">
                 <div class="card__subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img src="./img/tram-by-finn-mund_small.png" alt="" class="card__image">
+                <img src="./img/tram-by-finn-mund_small.png" alt="Yellow electric train" class="card__image">
                 <div class="card__subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img src="./img/pexels-mart-production-reading.png" alt="" class="card__image">
+                <img src="./img/pexels-mart-production-reading.png" alt="Woman reading inside a tram" class="card__image">
                 <div class="card__subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img src="./img/tram-by-orlando-jousset_small.png" alt="" class="card__image">
+                <img src="./img/tram-by-orlando-jousset_small.png" alt="White tram" class="card__image">
                 <div class="card__subtext">this is some subtext under an illustration or image</div>
             </div>
         </div>
@@ -62,7 +62,15 @@
             <figcaption>-Thor, God of Thunder</figcaption>  
         </figure>
     </div>
-    <div class="call-to-action"></div>
-    <div class="footer"></div>
+    <div class="call-to-action-section">
+        <div class="call-to-action">
+            <div class="call-to-action__info">
+                <h1 class="call-to-action__title">Call to action! It's time!</h1>
+                <p class="call-to-action__text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="call-to-action__sign-up-btn">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">Copyright &nbsp;©&nbsp; The Odin Project 2021</div>
 </body>
 </html>
